force-app/main/default/objects/ssot__PersonLifeEvent__dlm/fields/ssot__isNextMajorLifeEvent__c.field-meta.xml
<CustomField>
    <fullName>ssot__isNextMajorLifeEvent__c</fullName>
    <label>Next Major Life Event</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>isNextMajorLifeEvent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>