force-app/main/default/objects/ssot__PersonLifeEvent__dlm/fields/ssot__PersonLifeEventDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonLifeEventDateTime__c</fullName>
    <label>Person Life Event Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonLifeEventDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>