force-app/main/default/objects/ssot__PersonLifeEvent__dlm/fields/ssot__PersonLifeEventType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonLifeEventType__c</fullName>
    <label>Person Life Event Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonLifeEventType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>