force-app/main/default/objects/ssot__PersonLifeEvent__dlm/fields/ssot__rel_1697761237635_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761237635_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonLifeEvent_IndividualId_map_Ind_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>PersonLifeEvent_IndividualId_map_Ind_rel</relationshipLabel>
    <relationshipName>rel_1697761237635_end</relationshipName>
    <type>Lookup</type>
</CustomField>